actualizaciones en home y about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AboutPages</title>
+</head>
+<body>
+    <h1>This my Alphas Blogg About Page</h1>
+    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus esse natus reiciendis fugiat necessitatibus aspernatur corrupti dolore consectetur. Molestias magni mollitia dolor animi, error sunt veniam excepturi unde tempore repellat!</h3>
+</body>
+</html>
